fix some issues about colors contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,6 +3,7 @@
     --secondary-color: #274C77;
     --accent1-color: #6096BA;
     --accent2-color: #A3CEF1;
+    --accent3-color: #322816;
 }
 
 body, h1, h2, p, ul, li {
@@ -22,7 +23,7 @@ body {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    background-color: var(--accent1-color);
+    background-color: var(--secondary-color);
     padding: 10px 20px;
     gap: 20px;
 }
@@ -38,15 +39,6 @@ body {
     justify-content: flex-end;
     align-items: center;
 }
-
-.nav li {
-    background-color: var(--accent2-color);
-}
-
-.nav li:hover {
-    background-color: var(--accent1-color);
-}
-
 .nav a {
     text-decoration: none;
     color: var(--primary-color);
@@ -54,10 +46,6 @@ body {
     display: block;
     text-align: center;
     padding: 10px 15px;
-}
-
-.nav a:hover {
-    color: var(--primary-color);
 }
 
 section {
@@ -79,7 +67,7 @@ section img {
     align-items: center;
     flex-wrap: wrap;
     padding: 10px 20px;
-    background-color: var(--accent1-color);
+    background-color: var(--secondary-color);
     color: var(--primary-color);
     gap: 10px;
 }
@@ -91,12 +79,14 @@ section img {
 }
 
 .footer a {
+    color: var(--primary-color);
     margin-left: 10px;
 }
 
 .footer img {
     vertical-align: middle;
 }
+
 
 .content {
     text-align: center;
@@ -352,20 +342,20 @@ main {
 }
 
 .reach-our-team {
-    background-color: #E7ECEF;
+    background-color: var(--primary-color);
     padding: 40px 20px;
     text-align: center;
 }
 
 .reach-our-team h2 {
-    color: #274C77;
+    color: var(--secondary-color);
     font-size: 2rem;
     margin-bottom: 10px;
 }
 
 .reach-our-team .intro-text {
     font-size: 1rem;
-    color: #666;
+    color: var(--accent3-color);
     margin-bottom: 30px;
 }
 
